# libnm-rs-build

./: .gitignore  Dockerfile  README.md  build.sh  clean-gir.py  generate-toml.py  generate.py  merge-auto.py  meta.toml  serve.py
libmm-rs/: Gir_ModemManager.sys.toml  Gir_ModemManager.toml
libnm-rs/: Cargo.toml  Gir_NM.sys.toml  Gir_NM.toml
libnm-rs/examples/: access-point.rs
libnm-rs/src/: lib.rs
patches/: gir-in-addr.patch  gir-source-position.patch  nm-in-addr.patch  nm-no-doc-version.patch
patches/mm/: no-type-name.patch
patches/nm/: in-addr.patch  no-doc-version.patch
