[package]
name = "nm"
version = "0.2.1"
authors = ["majorz"]

[dependencies]
lazy_static = "1.2"
libc = "0.2"
bitflags = "1.0"
futures-core = "0.3"
futures-task = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
glib = { git = "https://github.com/gtk-rs/glib" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gio = { git = "https://github.com/gtk-rs/gio" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }

nm-sys = { path = "nm-sys" }
